init: re-initialize project with base code