@@ -9,105 +9,113 @@ import org.springframework.stereotype.Repository;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.nio.file.Paths;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Stream;
 
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 @Repository
-@ConditionalOnProperty(name = "spring.service.type", havingValue = "file")
 public class FileUserStatusRepository implements UserStatusRepository {
     private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public Path makePath(UUID id) {
-        return DIRECTORY.resolve(id + EXTENSION);
-    }
-
-
-    public FileUserStatusRepository(@Value("${storage.location}") String storageLocation) {
-        DIRECTORY = Path.of(storageLocation,"UserStatuses");
-        createDirectory(DIRECTORY);
-    }
-
-    public void createDirectory(Path path) {
-        if (Files.notExists(path)) {
+    public FileUserStatusRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, UserStatus.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
             try {
-                Files.createDirectories(path);
+                Files.createDirectories(DIRECTORY);
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
         }
     }
 
-    @Override
-    public UserStatus save(UserStatus userStatus) {
-        if (userStatus.getId() == null) throw new NoSuchElementException("UserStatus 객체를 찾을 수 없습니다.");
-        if (userStatus.getUserId() == null) throw new IllegalArgumentException("UserStatus의 유저 정보가 누락되었습니다.");
-
-        Path path = makePath(userStatus.getId());
-        try (FileOutputStream fos = new FileOutputStream(path.toFile());
-             ObjectOutputStream oos = new ObjectOutputStream(fos)
-        ) {
-            oos.writeObject(userStatus);
-            return userStatus;
-        } catch (IOException e) {
-            return null;
-        }
+    private Path resolvePath(UUID id) {
+        return DIRECTORY.resolve(id + EXTENSION);
     }
 
-    public UserStatus loadUserStatus(Path path) {
-        if (Files.notExists(path) || Files.isDirectory(path)) return null;
-
-        try (FileInputStream fis = new FileInputStream(path.toFile());
-             ObjectInputStream ois = new ObjectInputStream(fis)
+    @Override
+    public UserStatus save(UserStatus userStatus) {
+        Path path = resolvePath(userStatus.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
         ) {
-            Object obj = ois.readObject();
-            if (!(obj instanceof UserStatus)) {
-                throw new IllegalArgumentException("파일 내용이 UserStatus가 아닙니다 : " + path);
-            }
-            return (UserStatus) obj;
-        } catch (IOException | ClassNotFoundException e) {
-            System.err.println("UserStatus 파일 로드 실패 : " + path);
-            return null;
+            oos.writeObject(userStatus);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
+        return userStatus;
     }
 
     @Override
     public Optional<UserStatus> findById(UUID id) {
-        return Optional.ofNullable(loadUserStatus(makePath(id)));
+        UserStatus userStatusNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                userStatusNullable = (UserStatus) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            }
+        }
+        return Optional.ofNullable(userStatusNullable);
     }
 
     @Override
     public Optional<UserStatus> findByUserId(UUID userId) {
         return findAll().stream()
-                .filter(status -> status.getUserId().equals(userId))
+                .filter(userStatus -> userStatus.getUserId().equals(userId))
                 .findFirst();
     }
 
     @Override
     public List<UserStatus> findAll() {
-        if(!Files.isDirectory(DIRECTORY)) return Collections.emptyList();
-
-        try (Stream<Path> stream = Files.list(DIRECTORY)){
-            return stream
-                    .filter(path -> path.getFileName().toString().endsWith(EXTENSION))
-                    .map(this::loadUserStatus)
-                    .filter(Objects::nonNull)
-                    .sorted(Comparator.comparing(UserStatus::getUpdatedAt))
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
+                    .map(path -> {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
+                            return (UserStatus) ois.readObject();
+                        } catch (IOException | ClassNotFoundException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
                     .toList();
         } catch (IOException e) {
-            return Collections.emptyList();
+            throw new RuntimeException(e);
         }
     }
 
     @Override
-    public void delete(UUID id) {
-        try{
-            boolean deleted = Files.deleteIfExists(makePath(id));
-            if(!deleted){
-                System.out.println("삭제 실패 : 해당 ID의 UserStatus 파일이 존재하지 않습니다.");
-            }
+    public boolean existsById(UUID id) {
+        Path path = resolvePath(id);
+        return Files.exists(path);
+    }
+
+    @Override
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
+        try {
+            Files.delete(path);
         } catch (IOException e) {
-            throw new RuntimeException("파일 삭제 중 오류 발생", e);
+            throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public void deleteByUserId(UUID userId) {
+        this.findByUserId(userId)
+                .ifPresent(userStatus -> this.deleteById(userStatus.getId()));
     }
 }
